# rustlinks

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  Makefile  README.md  docker-compose.yml  rustfmt.toml
.github/workflows/: pull-request.yml
config/otel/: config.yaml
otel/: config.yaml
src/: api.rs  cli.rs  datastore.rs  errors.rs  etcd.rs  golink.rs  health.rs  main.rs  oauth.rs  redirect.rs  rustlink.rs  state.rs  tls.rs  util.rs  worker.rs
src/api/v1/: health.rs  links.rs  mod.rs  oauth.rs
src/oidc/: provider.rs
src/ui/: route.rs
src/ui/app/: package-lock.json  package.json  tailwind.config.js  tsconfig.json  webpack.dev.js  webpack.prod.js
src/ui/app/public/: index.html
src/ui/app/src/: App.tsx  index.tsx  ssr.tsx
src/ui/app/src/components/: SearchOrCreate.scss  SearchOrCreate.tsx
src/ui/app/src/pages/: Home.tsx  Login.tsx
src/ui/app/src/styles/: index.scss
