[package]
name = "rustlinks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.4.0", features = ["rustls-0_21"] }
actix-web-opentelemetry = { version = "0.15.0", optional = true }
clap = { version = "4.4.6", features = ["derive", "env"] }
dyn-fmt = "0.4.0"
etcd-rs = { path = "src/etcd-rs" }
futures = "0.3.28"
opentelemetry = { version = "0.20.0", features = [
    "rt-tokio-current-thread",
], optional = true }
opentelemetry-otlp = { version = "0.13.0", optional = true }
rustls = "0.21.7"
rustls-pemfile = "1.0.3"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.32.0", features = ["full"] }
urlencoding = "2.1.3"

[features]
default = ["tracing", "metrics"]
tracing = ["opentelemetry", "opentelemetry-otlp", "actix-web-opentelemetry"]
metrics = [
    "opentelemetry",
    "actix-web-opentelemetry/metrics",
    "opentelemetry-otlp/metrics",
]
